--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/trendingFragment"
-        android:name="com.pratthamarora.moviedb_clone.ui.TrendingFragment"
+        android:name="com.pratthamarora.moviedb_clone.ui.trending.TrendingFragment"
         android:label="trending_fragment"
         tools:layout="@layout/trending_fragment" />
 </navigation>
