--- a/app/src/main/res/layout/trending_fragment.xml
+++ b/app/src/main/res/layout/trending_fragment.xml
@@ -29,4 +29,6 @@
         android:padding="@dimen/standard_half"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         tools:listitem="@layout/item_movie" />
+
+    <include layout="@layout/layout_loading" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
