--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,5 +9,18 @@
         android:id="@+id/trendingFragment"
         android:name="com.pratthamarora.moviedb_clone.ui.trending.TrendingFragment"
         android:label="trending_fragment"
-        tools:layout="@layout/trending_fragment" />
+        tools:layout="@layout/trending_fragment" >
+        <action
+            android:id="@+id/action_trendingFragment_to_movieDetailFragment"
+            app:destination="@id/movieDetailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/movieDetailFragment"
+        android:name="com.pratthamarora.moviedb_clone.ui.moviedetail.MovieDetailFragment"
+        android:label="movie_detail_fragment"
+        tools:layout="@layout/movie_detail_fragment" >
+        <argument
+            android:name="movieId"
+            app:argType="long" />
+    </fragment>
 </navigation>
