--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -14,11 +14,12 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.pratthamarora.moviedb_clone.utils.RatioImageView
             android:id="@+id/moviePoster"
             android:layout_width="120dp"
-            android:layout_height="180dp"
+            android:layout_height="wrap_content"
             android:adjustViewBounds="true"
+            app:ratio="0.67"
             tools:src="@tools:sample/avatars" />
 
         <LinearLayout
