--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,17 @@
         <argument
             android:name="movieId"
             app:argType="long" />
+        <action
+            android:id="@+id/action_movieDetailFragment_to_castFragment"
+            app:destination="@id/castFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/castFragment"
+        android:name="com.pratthamarora.moviedb_clone.ui.cast.CastFragment"
+        android:label="fragment_cast"
+        tools:layout="@layout/fragment_cast" >
+        <argument
+            android:name="cast"
+            app:argType="com.pratthamarora.moviedb_clone.data.model.Cast" />
     </fragment>
 </navigation>
